latest blog section with responsive and modification of nav bar(javascript display hidden when click)

--- a/index.html
+++ b/index.html
@@ -807,6 +807,184 @@
         </section>
 
 
+
+
+        <section>
+            <div class="latest-blog-container">
+                <div class="foot-header-container">
+                    <div class="foot-header fh1">
+                        <p>latest blog</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="our-team-angle-btns otab-margin">
+                    <div class="angle-btn">
+                        <button class="main-angle-btn"><i class="fa fa-angle-left"></i></button>
+                    </div>
+                    <div class="angle-btn">
+                        <button class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
+                    </div>
+                </div>
+
+                <div class="latest-blog-content-container">
+                    <div class="two-latest-blog">
+                        <div class="latest-blog-card">
+                            <div class="latest-blog-card-image">
+                                <div class="blog-card-top">
+                                    <div class="latest-blog-date">
+                                        <p>
+                                            17 <br> may
+                                        </p>
+                                    </div>
+
+                                    <div class="blog-card-icons">
+                                        <div class="card-icon">
+                                            <abbr title="where can I get some?">
+                                                <a href=""><i class="fa fa-search-plus"></i></a>
+                                            </abbr>
+                                        </div>
+                                        <div class="card-icon">
+                                            <abbr title="click to view Read More">
+                                                <a href=""><i class="fa fa-link"></i></a>
+                                            </abbr>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="blog-info-container">
+                                <div class="blog-comment">
+                                    <a href="">
+                                        <i class="fa fa-comment"></i>
+                                        <span>1 comments</span>
+                                    </a>
+                                </div>
+                                <div class="blog-info-link">
+                                    <a href="">ireland qualification</a>
+                                </div>
+                                <div class="blgo-info-text">
+                                    <p>
+                                        Lorem Ipsum is simply dummy 
+                                        text of the printing and 
+                                        typesetting industry. Lorem 
+                                        Ipsum has been the industry's 
+                                    </p>
+                                </div>
+                                <div class="horizontal-line2"></div>
+                                <div class="primary-btn pb1">
+                                    <a href="">read more</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="latest-blog-card lbc-margin">
+                            <div class="latest-blog-card-image lbc-ed2">
+                                <div class="blog-card-top">
+                                    <div class="latest-blog-date">
+                                        <p>
+                                            15 <br> may
+                                        </p>
+                                    </div>
+
+                                    <div class="blog-card-icons">
+                                        <div class="card-icon">
+                                            <abbr title="where can I get some?">
+                                                <a href=""><i class="fa fa-search-plus"></i></a>
+                                            </abbr>
+                                        </div>
+                                        <div class="card-icon">
+                                            <abbr title="click to view Read More">
+                                                <a href=""><i class="fa fa-link"></i></a>
+                                            </abbr>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="blog-info-container">
+                                <div class="blog-comment">
+                                    <a href="">
+                                        <i class="fa fa-comment"></i>
+                                        <span>10 comments</span>
+                                    </a>
+                                </div>
+                                <div class="blog-info-link">
+                                    <a href="">Many Publishing Packages</a>
+                                </div>
+                                <div class="blgo-info-text">
+                                    <p>
+                                        Lorem Ipsum is simply dummy 
+                                        text of the printing and 
+                                        typesetting industry. Lorem 
+                                        Ipsum has been the industry's 
+                                    </p>
+                                </div>
+                                <div class="horizontal-line2"></div>
+                                <div class="primary-btn pb1">
+                                    <a href="">read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="two-latest-blog tlb-ed2">
+                        <div class="latest-blog-card lbc-ed4">
+                            <div class="latest-blog-card-image lbc-ed3">
+                                <div class="blog-card-top">
+                                    <div class="latest-blog-date">
+                                        <p>
+                                            22 <br> may
+                                        </p>
+                                    </div>
+
+                                    <div class="blog-card-icons">
+                                        <div class="card-icon">
+                                            <abbr title="where can I get some?">
+                                                <a href=""><i class="fa fa-search-plus"></i></a>
+                                            </abbr>
+                                        </div>
+                                        <div class="card-icon">
+                                            <abbr title="click to view Read More">
+                                                <a href=""><i class="fa fa-link"></i></a>
+                                            </abbr>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="blog-info-container">
+                                <div class="blog-comment">
+                                    <a href="">
+                                        <i class="fa fa-comment"></i>
+                                        <span>15 comments</span>
+                                    </a>
+                                </div>
+                                <div class="blog-info-link">
+                                    <a href="">Where Can I Get Some ?</a>
+                                </div>
+                                <div class="blgo-info-text">
+                                    <p>
+                                        Lorem Ipsum is simply dummy 
+                                        text of the printing and 
+                                        typesetting industry. Lorem 
+                                        Ipsum has been the industry's 
+                                    </p>
+                                </div>
+                                <div class="horizontal-line2"></div>
+                                <div class="primary-btn pb1">
+                                    <a href="">read more</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <script src="/scripts/home_script.js"></script>
     </body>
 </html>
