players squad section with responsive

--- a/index.html
+++ b/index.html
@@ -982,6 +982,96 @@
                     </div>
                 </div>
             </div>
+        </section> 
+
+
+
+        <section>
+            <div class="players-squad-container">
+                <div class="foot-header-container">
+                    <div class="foot-header fh1">
+                        <p>players squad</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="our-team-angle-btns otab-margin">
+                    <div class="angle-btn">
+                        <button class="main-angle-btn"><i class="fa fa-angle-left"></i></button>
+                    </div>
+                    <div class="angle-btn">
+                        <button class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
+                    </div>
+                </div>
+
+                <div class="players-squad-contents">
+                    <div class="two-players-squad">
+                        <div class="player-squad ps-ed1">
+                            <div class="player-squad-image">
+                                <a href="">
+                                    <abbr title="click to see player info"><img src="/images/player1.png" alt=""></abbr>
+                                </a>
+                            </div>
+                            <div class="player-squad-info">
+                                <p class="player-name">
+                                    <a href="">Andrea Pirlo</a>
+                                </p>
+                                <p class="player-squad-post">
+                                    DEFENDER
+                                </p>
+                            </div>
+                        </div>
+                        <div class="player-squad ps-ed2">
+                            <div class="player-squad-image">
+                                <a href="">
+                                    <abbr title="click to see player info"><img src="/images/player2.png" alt=""></abbr>
+                                </a>
+                            </div>
+                            <div class="player-squad-info">
+                                <p class="player-name">
+                                    <a href="">Andres Iniesta</a>
+                                </p>
+                                <p class="player-squad-post">
+                                    FORWARD
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="two-players-squad tps-ed2">
+                        <div class="player-squad">
+                            <div class="player-squad-image">
+                                <a href="">
+                                    <abbr title="click to see player info"><img src="/images/player3.png" alt=""></abbr>
+                                </a>
+                            </div>
+                            <div class="player-squad-info">
+                                <p class="player-name">
+                                    <a href="">Radamel Falcao</a>
+                                </p>
+                                <p class="player-squad-post">
+                                    DEFENDER
+                                </p>
+                            </div>
+                        </div>
+                        <div class="player-squad ps-ed4">
+                            <div class="player-squad-image">
+                                <a href="">
+                                    <abbr title="click to see player info"><img src="/images/player4.png" alt=""></abbr>
+                                </a>
+                            </div>
+                            <div class="player-squad-info">
+                                <p class="player-name">
+                                    <a href="">Lionel Messi</a>
+                                </p>
+                                <p class="player-squad-post">
+                                    GOALKEEPER
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
