players squad customer section with responsive

--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,81 @@
             </div>
         </section>
 
+        <div class="players-customers-container">
+            <div class="players-customer-logo">
+                <img src="/images/kick-short.png" alt="">
+            </div>
+
+            <div class="main-player-customer-info-container">
+                <div class="player-customer-info-container">
+                    <div class="player-customer-top">
+                        <div class="angle-btn">
+                            <button class="main-angle-btn ab-margin-left"><i class="fa fa-angle-left"></i></button>
+                        </div>
+                    </div>
+
+                    <div class="player-customer-image-name">
+                        <div class="player-customer-image">
+                            <img src="/images/group.png" alt="">
+                        </div>
+
+                        <!-- <div id="hebert-image" class="player-customer-image">
+                            <img src="/images/medal.png" alt="">
+                        </div> -->
+
+                        <div class="player-customer-name-type">
+                            <p class="player-customer-name">
+                                nkem. shanas
+                            </p>
+                            <p class="player-customer-type">
+                                player
+                            </p>
+                        </div>
+
+                        <!-- <div id="hebert-player-info" class="player-customer-name-type">
+                            <p class="player-customer-name">
+                                mahow. hebert
+                            </p>
+                            <p class="player-customer-type">
+                                player
+                            </p>
+                        </div> -->
+                    </div>
+
+                    <div class="angle-btn">
+                        <button class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
+                    </div>
+                </div>
+
+
+                <div id="shanas-text" class="player-customer-text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut  labore et dolore 
+                        magna aliqua. Quis ipsum suspendisse 
+                        ultrices gravida.
+                    </p>
+                </div>
+                <div class="player-customer-mark">
+                    <p>
+                        "
+                    </p>
+                </div>
+
+                <!-- <div id="hebert-text" class="player-customer-text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut  labore et dolore 
+                        magna aliqua. Quis ipsum suspendisse 
+                        ultrices gravida.
+                    </p>
+                </div> -->
+            </div>
+
+        </div>
+
 
         <script src="/scripts/home_script.js"></script>
     </body>
