--- a/index.html
+++ b/index.html
@@ -1083,20 +1083,23 @@
                 <div class="player-customer-info-container">
                     <div class="player-customer-top">
                         <div class="angle-btn">
-                            <button class="main-angle-btn ab-margin-left"><i class="fa fa-angle-left"></i></button>
+                            <button id="change-player-left" class="main-angle-btn ab-margin-left"><i class="fa fa-angle-left"></i></button>
                         </div>
                     </div>
 
                     <div class="player-customer-image-name">
-                        <div class="player-customer-image">
+                        <!-- shanas image -->
+                        <div id="shanas-image" class="player-customer-image">
                             <img src="/images/group.png" alt="">
                         </div>
 
-                        <!-- <div id="hebert-image" class="player-customer-image">
+                        <!-- hebert image -->
+                        <div id="hebert-image" class="player-customer-image">
                             <img src="/images/medal.png" alt="">
-                        </div> -->
+                        </div>
 
-                        <div class="player-customer-name-type">
+                        <!-- shanas info -->
+                        <div id="shanas-player-info" class="player-customer-name-type">
                             <p class="player-customer-name">
                                 nkem. shanas
                             </p>
@@ -1105,46 +1108,55 @@
                             </p>
                         </div>
 
-                        <!-- <div id="hebert-player-info" class="player-customer-name-type">
+                        <!-- hebert info -->
+                        <div id="hebert-player-info" class="player-customer-name-type">
                             <p class="player-customer-name">
-                                mahow. hebert
+                                mahow hebert
                             </p>
                             <p class="player-customer-type">
-                                player
+                                player 
                             </p>
-                        </div> -->
+                        </div>
+
                     </div>
 
                     <div class="angle-btn">
-                        <button class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
+                        <button id="change-player-right" class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
                     </div>
                 </div>
 
-
+                <!-- shanas text -->
                 <div id="shanas-text" class="player-customer-text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur 
+                        lorem ipson, consectetur 
                         adipiscing elit, sed do eiusmod tempor 
                         incididunt ut  labore et dolore 
                         magna aliqua. Quis ipsum suspendisse 
                         ultrices gravida.
                     </p>
-                </div>
-                <div class="player-customer-mark">
-                    <p>
-                        "
-                    </p>
+
+                    <div class="player-customer-mark">
+                        <p>
+                            "
+                        </p>
+                    </div>
                 </div>
 
-                <!-- <div id="hebert-text" class="player-customer-text">
+                <!-- hebert text -->
+                <div id="hebert-text" class="player-customer-text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur 
+                        hebert text dolor sit amet, consectetur 
                         adipiscing elit, sed do eiusmod tempor 
                         incididunt ut  labore et dolore 
                         magna aliqua. Quis ipsum suspendisse 
                         ultrices gravida.
                     </p>
-                </div> -->
+                    <div class="player-customer-mark">
+                        <p>
+                            "
+                        </p>
+                    </div>
+                </div>
             </div>
 
         </div>
