contact page with responsive and linking to other page and some modification on some pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Soccer World HTML Template - Soccer</title>
+    <title>Home - Soccer World informations</title>
 
     <link rel="stylesheet" href="/styles/main_style.css">
     <link rel="stylesheet" href="/icons/fontawesome/css/font-awesome.css">
@@ -1090,12 +1090,12 @@
                         <div class="player-customer-image-name">
                             <!-- shanas image -->
                             <div id="shanas-image" class="player-customer-image">
-                                <img src="/images/group.png" alt="">
+                                <img src="/images/shanas-pic.jpg" alt="">
                             </div>
 
                             <!-- hebert image -->
                             <div id="hebert-image" class="player-customer-image">
-                                <img src="/images/medal.png" alt="">
+                                <img src="/images/hebet-pic.jpg" alt="">
                             </div>
 
                             <!-- shanas info -->
@@ -1128,11 +1128,13 @@
                     <!-- shanas text -->
                     <div id="shanas-text" class="player-customer-text">
                         <p>
-                            lorem ipson, consectetur 
-                            adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut  labore et dolore 
-                            magna aliqua. Quis ipsum suspendisse 
-                            ultrices gravida.
+                            You have to fight to reach your dream. 
+                            You have to sacrifice and work 
+                            hard for it. Football is a game of 
+                            mistakes. Whoever makes the 
+                            fewest mistakes wins. The more 
+                            difficult the victory, the greater 
+                            the happiness in winning.
                         </p>
 
                         <div class="player-customer-mark">
@@ -1145,11 +1147,13 @@
                     <!-- hebert text -->
                     <div id="hebert-text" class="player-customer-text">
                         <p>
-                            hebert text dolor sit amet, consectetur 
-                            adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut  labore et dolore 
-                            magna aliqua. Quis ipsum suspendisse 
-                            ultrices gravida.
+                            It's not just about the money, it's 
+                            about what you achieve on the pitch. Football, 
+                            like life, is filled with ups and downs, 
+                            and the most important thing is to 
+                            keep moving forward and never give up. There 
+                            is no pressure when you're making a 
+                            dream come true.
                         </p>
                         <div class="player-customer-mark">
                             <p>
@@ -1210,7 +1214,7 @@
                                 
                                 <div class="container-footer-link">
                                     <div class="main-footer-link">
-                                        <i class="fa fa-map"></i>
+                                        <i class="fa fa-home"></i>
                                         <p>National park,d1 <br> 588436, <br> United States</p>
                                     </div>
                                     <div class="main-footer-link">
@@ -1218,11 +1222,11 @@
                                         <p>+91 123 456 789</p>
                                     </div>
                                     <div class="main-footer-link">
-                                        <i class="fa fa-phone"></i>
+                                        <i class="fa fa-fax"></i>
                                         <p>0123-456-789</p>
                                     </div>
                                     <div class="main-footer-link">
-                                        <i class="fa fa-map"></i>
+                                        <i class="fa fa-envelope"></i>
                                         <a href="">demo@Yourstore.com</a>
                                     </div>
                                 </div>
@@ -1342,20 +1346,20 @@
                                 </div>
                                 
                                 <div class="container-footer-link cfl-ed1">
-                                    <div class="icon">
-                                        <a href=""><i class="fa fa-facebook"></i></a>
+                                    <div class="icon resize-icon">
+                                        <a href=""><i class="fa fa-cc-visa"></i></a>
                                     </div>
-                                    <div class="icon">
-                                        <a href=""><i class="fa fa-instagram"></i></a>
+                                    <div class="icon resize-icon">
+                                        <a href=""><i class="fa fa-cc-mastercard"></i></a>
                                     </div>
-                                    <div class="icon">
-                                        <a href=""><i class="fa fa-twitter"></i></a>
+                                    <div class="icon resize-icon">
+                                        <a href=""><i class="fa fa-cc-paypal"></i></a>
                                     </div>
-                                    <div class="icon">
-                                        <a href=""><i class="fa fa-whatsapp"></i></a>
+                                    <div class="icon resize-icon">
+                                        <a href=""><i class="fa fa-cc-discover"></i></a>
                                     </div>
-                                    <div class="icon">
-                                        <a href=""><i class="fa fa-youtube"></i></a>
+                                    <div class="icon resize-icon">
+                                        <a href=""><i class="fa fa-cc-amex"></i></a>
                                     </div>
                                 </div>
                             </div>
