javascript section for the contact page

--- a/contact.html
+++ b/contact.html
@@ -342,7 +342,10 @@
                                     </p>
                                 </div>
                                 <div class="contact-input">
-                                    <input type="text" placeholder="Your Name">
+                                    <input id="first-name" type="text" placeholder="Your Name">
+                                    <p class="contact-error-message contact-error-message-first">
+                                        Enter your name
+                                    </p>
                                 </div>
                             </div>
                             <div class="input-content ic-ed2">
@@ -352,7 +355,10 @@
                                     </p>
                                 </div>
                                 <div class="contact-input">
-                                    <input type="text" placeholder="Last Name">
+                                    <input id="last-name" type="text" placeholder="Last Name">
+                                    <p class="contact-error-message contact-error-message-last">
+                                        Enter last name
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -365,7 +371,10 @@
                                     </p>
                                 </div>
                                 <div class="contact-input">
-                                    <input type="text" placeholder="Phone Number">
+                                    <input id="phone-number" type="text" placeholder="Phone Number">
+                                    <p class="contact-error-message contact-error-message-number">
+                                        Enter phone number
+                                    </p>
                                 </div>
                             </div>
                             <div class="input-content ic-ed2">
@@ -375,8 +384,11 @@
                                     </p>
                                 </div>
                                 <div class="contact-input">
-                                    <input type="text" placeholder="Email">
+                                    <input id="email" type="text" placeholder="Email">
                                 </div>
+                                <p class="contact-error-message contact-error-message-email">
+                                    Enter email
+                                </p>
                             </div>
                         </div>
                         <div class="input-area ia-ed2">
@@ -388,6 +400,9 @@
                                 </div>
                                 <div class="contact-input">
                                     <textarea id="contact-message" placeholder="message" cols="30" rows="8"></textarea>
+                                    <p class="contact-error-message contact-error-message-message">
+                                        Type your message
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -395,6 +410,9 @@
                         <div class="third-btn">
                             <a id="send-btn" href="">send</a>
                         </div>
+                        <p class="contact-error-message erm-ed contact-error-message-success">
+                            Your message has been sent successfully
+                        </p>
                     </div>
                 </div>
             </div>
