--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="/contact.html">contact</a></li>
                 </ul>
             </div>
 
@@ -276,7 +276,7 @@
                                 </ul>
 
                             </li>
-                            <li><a href="">contact</a></li>
+                            <li><a href="/contact.html">contact</a></li>
                         </ul>
                     </div>
 
