matches page with responsive and linking to onther pages

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 
                 <ul id="nav-link">
                     <li><a href="">home</a></li>
-                    <li><a href="" id="matches-link">matches <i class="fa fa-angle-right"></i></a>
+                    <li><a href="/matches.html" id="matches-link">matches <i class="fa fa-angle-right"></i></a>
                         <div id="sub-menu">
                             <ul>
                                 <li><a href="">matches</a></li>
@@ -246,7 +246,7 @@
                             <li>
                                 <span id="menu-matches-link"><a href="">matches</a> <i class="fa fa-angle-down"></i></span>
                                 <ul id="menu-matches-content" class="link-hover">
-                                    <li><a href="">matches</a></li>
+                                    <li><a href="/matches.html">matches</a></li>
                                     <li><span id="menu-recent-win-link"><a href="">recently winners</a> <i class="fa fa-angle-down"></i></span>
                                         
                                         <ul id="menu-recent-content">
