modification of javascript functionnality of display responsive

--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                 
                 <ul id="nav-link">
                     <li><a href="">home</a></li>
-                    <li><a href="/matches.html" id="matches-link">matches <i class="fa fa-angle-right"></i></a>
+                    <li><a href="" id="matches-link">matches <i class="fa fa-angle-right"></i></a>
                         <div id="sub-menu">
                             <ul>
-                                <li><a href="">matches</a></li>
+                                <li><a href="/matches.html">matches</a></li>
                                 <li><a href="">recently winners <i class="fa fa-angle-right"></i></a>
                                     <div id="sub-menu" class="fix-margin">
                                         <ul>
