adding rating section to contact and home page with javacsript

--- a/matches.html
+++ b/matches.html
@@ -18,6 +18,17 @@
 </head>
     <body>
         <section>
+
+            <div class="loader">
+                <div class="loader-text">
+                    <p>
+                        welcome to: 
+                        <span class="loader-logo">Soccer World informations</span>
+                        <span>with <i class="fa fa-heart"></i> shanas </span>
+                    </p>
+                </div>
+            </div>
+
             <div class="landing-container">
                 <div class="landing-page-top-container">
                     <div class="landing-number">
